fixing text alignment

--- a/style.css
+++ b/style.css
@@ -211,10 +211,6 @@ header a {
 	font-weight: bold;
 }
 
-.tc {
-    text-align: center;
-}
-
 @media screen and (max-width: 353px) {
 	header h1 {
 		font-size: 3em;
